log_filter 7.x-1.0.x, 2012-01-06
--------------------------------
* Removed create mode from viewer form, because that mode is handled solely via AJAX.

log_filter 7.x-1.0.x, 2012-01-05
--------------------------------
* Declared menu items now optionally hide default dblog viewer/remover page.
* Frontend modes seem fully resolved.

log_filter 7.x-1.0.x, 2012-01-04
--------------------------------
* Fronted now use elements directly for DOM and event modifications, instead of css selectors (the selectors only used initially for getting the elements).

log_filter 7.x-1.0.x, 2012-12-16
---------------------------
* Project started.