@@ -1,6 +1,7 @@
 log_filter 7.x-1.0.x, 2012-01-06
 --------------------------------
 * Removed create mode from viewer form, because that mode is handled solely via AJAX.
+* Frontend almost ready, except mode and name get wrong when alternating between create, edit, cancel etc.
 
 log_filter 7.x-1.0.x, 2012-01-05
 --------------------------------
